<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nv_component"
            android:icon="@drawable/ic_menu_camera"
            android:actionLayout="@layout/anchor"
            android:title="@string/component" />
        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/ic_menu_gallery"
            android:actionLayout="@layout/anchor"
            android:title="@string/media" />
        <item
            android:id="@+id/nav_Draw"
            android:icon="@drawable/ic_menu_slideshow"
            android:actionLayout="@layout/anchor"
            android:title="@string/Draw" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_menu_manage"
            android:actionLayout="@layout/anchor"
            android:title="@string/sensor" />
        <item
            android:id="@+id/nav_function"
            android:icon="@drawable/ic_menu_manage"
            android:actionLayout="@layout/anchor"
            android:title="@string/Functional" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_menu_manage"
            android:actionLayout="@layout/anchor"
            android:title="@string/store" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_menu_manage"
            android:actionLayout="@layout/anchor"
            android:title="@string/connect" />

    </group>
</menu>
